--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <button type="button" class="btn btn-lg btn-outline-light download-button"><i class="fa-brands fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6">
-          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
+          <img class="title-image d-none d-lg-block" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
     </div>
