--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           <button type="button" class="btn btn-lg btn-dark download-button"><i class="fa-brands fa-apple"></i> Download</button>
           <button type="button" class="btn btn-lg btn-outline-light download-button"><i class="fa-brands fa-google-play"></i> Download</button>
         </div>
-        <div class="col-lg-6">
-          <img class="title-image d-none d-lg-block" src="images/iphone6.png" alt="iphone-mockup">
+        <div class="title-container col-lg-6">
+          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
     </div>
