Style and space footer section.

--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
 
   <footer id="footer">
 
+    <i class="footer-icon fa-lg fa-brands fa-twitter"></i>
+    <i class="footer-icon fa-lg fa-brands fa-facebook"></i>
+    <i class="footer-icon fa-lg fa-brands fa-instagram"></i>
+    <i class="footer-icon fa-lg fa-solid fa-envelope"></i>
     <p>© Copyright TinDog</p>
 
   </footer>
