--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
     <h3>Find the True Love of Your Dog's Life Today.</h3>
     <button class="btn btn-lg btn-dark bot-download-button" type="button"><i class="fa-brands fa-apple"></i> Download</button>
-    <button class="btn btn-lg btn-outline-light bot-download-button" type="button"><i class="fa-brands fa-google-play"></i> Download</button>
+    <button class="btn btn-lg btn-light bot-download-button" type="button"><i class="fa-brands fa-google-play"></i> Download</button>
 
   </section>
 
